working on Prediction Price

--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -41,7 +41,7 @@
             font-family: var(--font-main);
             line-height: 1.6;
             color: var(--text-color);
-            background: linear-gradient(to bottom, #E8F5E9, #FFFFFF); /* Subtle green-to-white gradient */
+            background: linear-gradient(to bottom, #E8F5E9, #FFFFFF);
             min-height: 100vh;
             display: flex;
             flex-direction: column;
@@ -570,7 +570,7 @@
             <ul class="nav-links" id="nav-links">
                 <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="{% url 'farm-map' %}"><i class="fas fa-map-marked-alt"></i> Farm Map</a></li>
-                <li><a href="/services"><i class="fas fa-seedling"></i> Services</a></li>
+                <li><a href="{% url 'my_farms' %}"><i class="fas fa-tractor"></i> My Farms</a></li>
                 <li><a href="/blog"><i class="fas fa-leaf"></i> Blog</a></li>
                 
                 <div class="nav-actions">
@@ -654,7 +654,7 @@
                 <ul class="footer-links">
                     <li><a href="/"><i class="fas fa-chevron-right"></i> Home</a></li>
                     <li><a href="{% url 'farm-map' %}"><i class="fas fa-chevron-right"></i> Farm Map</a></li>
-                    <li><a href="/services"><i class="fas fa-chevron-right"></i> Services</a></li>
+                    <li><a href="{% url 'my_farms' %}"><i class="fas fa-chevron-right"></i> My Farms</a></li>
                     <li><a href="/blog"><i class="fas fa-chevron-right"></i> Blog</a></li>
                     <li><a href="/contact"><i class="fas fa-chevron-right"></i> Contact</a></li>
                 </ul>
