--- a/users/templates/maps/my_farms.html
+++ b/users/templates/maps/my_farms.html
@@ -267,7 +267,7 @@
 
         <div class="container">
             <div class="button-container">
-                <a href="{% url 'farm-map' %}" class="btn"><i class="fas fa-map"></i> Back to Map</a>
+                <a href="{% url 'maps:farm-map' %}" class="btn"><i class="fas fa-map"></i> Back to Map</a>
             </div>
 
             <div id="farmsMap"></div>
