working on the static

--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -93,7 +93,7 @@
 
     /* Hero Section */
     .hero-section {
-        background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url('{% static "img/farm_landscape.jpg" %}');
+        background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.3)), url('{% static "img/img2.webp" %}');
         background-size: cover;
         background-position: center;
         color: #FFFFFF;
@@ -513,7 +513,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="card program-card">
                     <span class="user-type-badge badge-government">{% trans "Government" %}</span>
-                    <img src="{% static 'img/program_subsidy.jpg' %}" class="card-img-top program-card-img-top" alt="{% trans 'Subsidy Program' %}">
+                    <img src="{% static 'img/img1.webp' %}" class="card-img-top program-card-img-top" alt="{% trans 'Subsidy Program' %}">
                     <div class="card-body">
                         <h5 class="card-title">{% trans "Crop Diversification Grants" %}</h5>
                         <p class="card-text">{% trans "Financial support for farmers to adopt crop diversification and sustainable farming practices." %}</p>
@@ -524,7 +524,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="card program-card">
                     <span class="user-type-badge badge-nonprofit">{% trans "Non-Profit" %}</span>
-                    <img src="{% static 'img/program_training.jpg' %}" class="card-img-top program-card-img-top" alt="{% trans 'Training Program' %}">
+                    <img src="{% static 'img/img4.png' %}" class="card-img-top program-card-img-top" alt="{% trans 'Training Program' %}">
                     <div class="card-body">
                         <h5 class="card-title">{% trans "Sustainable Farming Training" %}</h5>
                         <p class="card-text">{% trans "Workshops on organic farming, water conservation, and soil health management." %}</p>
@@ -535,7 +535,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="card program-card">
                     <span class="user-type-badge badge-farmer">{% trans "Farmer" %}</span>
-                    <img src="{% static 'img/program_marketplace.jpg' %}" class="card-img-top program-card-img-top" alt="{% trans 'Marketplace Program' %}">
+                    <img src="{% static 'img/img4.png' %}" class="card-img-top program-card-img-top" alt="{% trans 'Marketplace Program' %}">
                     <div class="card-body">
                         <h5 class="card-title">{% trans "Direct Marketplace Access" %}</h5>
                         <p class="card-text">{% trans "Sell your produce directly to consumers through our digital marketplace at fair prices." %}</p>
@@ -556,7 +556,7 @@
                 <div class="testimonial-card">
                     <p class="testimonial-text">{% trans "AGRICHAIN has transformed the way I farm. The real-time data and predictive analytics have helped me make better decisions and increase my yield." %}</p>
                     <div class="testimonial-author">
-                        <img src="{% static 'img/farmer1.jpg' %}" alt="Farmer" class="testimonial-avatar">
+                        <img src="{% static 'img/img4.png' %}" alt="Farmer" class="testimonial-avatar">
                         <div>
                             <p class="testimonial-name">{% trans "Rajesh Kumar" %}</p>
                             <p class="testimonial-role">{% trans "Farmer, Punjab" %}</p>
